--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<title>Flask Template</title>
+<title>Task Master</title>
 {% endblock %}
 
 {% block body %}
