--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,10 +1,6 @@
 <nav>
     <ul>
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('todos') }}">ToDos</a></li>
-        <li><a href="{{ url_for('celebs') }}">Celebrities</a></li>
-        <li><a href="{{ url_for('sandwiches') }}">Love Sandwiches</a></li>
-        <li><a href="{{ url_for('about') }}">About</a></li>
-        <li><a href="{{ url_for('contact') }}">Contact</a></li>
+        <li><a href="{{ url_for('tasks') }}">Task Master</a></li>
     </ul>
 </nav>
