--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -66,8 +66,11 @@
                     {% endif %}
                 </td>
                 <td>
-                    <span class="material-icons-outlined">{{ categories[task["category_id"]]['icon'] }}</span><br>
-                    {{ categories[task["category_id"]]['name'] }}
+                    {% if task["category_id"] %}
+                        {% set category = categories[task["category_id"]] %}
+                        <span class="material-icons-outlined">{{ category['icon'] }}</span><br>
+                        {{ category['name'] }}
+                    {% endif %}
                 </td>
                 <td>
                     {{ task['name'] }}
