add Material Design Bootstrap5 starter kit to base.html

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -49,7 +49,7 @@
     </div>
 
     {% if tasks %}
-    <table>
+    <table class="table">
         <tr>
             <th>Image</th>
             <th>Category</th>
