--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='tasks.png') }}" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <link rel="icon" href="{{ url_for('static', filename='tasks.png') }}" type="image/x-icon">
+    <title>Task Master</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+    <!-- Google Material Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+    <!-- MDB -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='mdb.min.css') }}/" />
+
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
     {% block head %}{% endblock %}
-</head>
-
-<body>
+  </head>
+  <body>
     {% include'navigation.html' %}
     
     <h1>{{ page_title }}</h1>
 
     {% block body %}{% endblock %}
 
-</body>
+    <!-- MDB -->
+    <script type="text/javascript" src="{{ url_for('static', filename='mdb.min.js') }}"></script>
+    <!-- Custom scripts -->
+    <script type="text/javascript"></script>
+  </body>
 </html>
