add register page with username, password, register button

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,22 +33,21 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">New Task</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Manage Categories</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Log Out</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    {% include'navigation.html' %}
     
     <h1>{{ page_title }}</h1>
 
