--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,8 @@
                     <i class="fas fa-user-plus fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
-                    <input type="text" id="username" name="username" class="form-control">
+                    <input type="text" id="username" name="username" class="form-control" 
+                        minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="username">Username</label>
                 </div>
                 <div class="offset-1 col-10 text-end mt-0">
@@ -26,13 +27,16 @@
                     <i class="fas fa-user-lock fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
-                    <input type="text" id="password" name="password" class="form-control">
+                    <input type="password" id="password" name="password" class="form-control" 
+                        minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="password">Password</label>
                 </div>
                 <div class="col-11 text-end mt-0">
                     <span id="password-rule" class="form-text">Must be 5-15 characters long.</span>
                 </div>
-                <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">Register</button>
+                <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">
+                    <span class="lead">Register</span><i class="fas fa-sign-in-alt fa-2x ms-3"></i>
+                </button>
             </div>
     </form>
 </div>
