--- a/templates/reglog.html
+++ b/templates/reglog.html
@@ -5,11 +5,11 @@
 
 {% block body %}
 <div class="row">
-    <div class="card col offset-md-2 col-12 col-md-8">
+    <div class="card col-12 offset-md-2 col-md-8 offset-lg-4 col-lg-4 mt-3">
         <form class="card-body row g-3 align-items-center" method="POST" action="{{ request.path }}">
             <h3 class="card-title text-center">{% if register %}Register{% else %}Log In{% endif %}</h3>
             <div class="row">
-                <div class="col-1 text-end mt-3">
+                <div class="col-1 col-lg-2 text-end mt-3">
                     <i class="fas {% if register %}fa-user-plus{% else %}fa-user-cog{% endif %} fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
@@ -17,13 +17,13 @@
                         minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="username">Username</label>
                 </div>
-                <div class="offset-1 col-10 text-end mt-0">
+                <div class="col-11 col-lg-12 text-end mt-0">
                     <span id="username-rule" class="form-text">Must be 5-15 characters long.</span>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-1 text-end mt-3">
+                <div class="col-1 col-lg-2 text-end mt-3">
                     <i class="fas fa-user-lock fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
@@ -31,7 +31,7 @@
                         minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="password">Password</label>
                 </div>
-                <div class="col-11 text-end mt-0">
+                <div class="col-11 col-lg-12 text-end mt-0">
                     <span id="password-rule" class="form-text">Must be 5-15 characters long.</span>
                 </div>
                 <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">
