--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,8 +6,8 @@
 {% block body %}
 <div class="row">
     <div class="card col-12 offset-md-2 col-md-8 offset-lg-4 col-lg-4 mt-3">
-        <div class="card-body row g-3 align-items-center" method="POST" action="{{ request.path }}">
-            <h3 class="card-title text-center">{{ session[username_field] }}'s Profile</h3>
+        <div class="card-body row g-3 align-items-center">
+            <h3 class="card-title text-center">{{ user['username'] }}'s Profile</h3>
         </div>
     </div>
 </div>
